{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 141,
  "lineage": "46e5b211-e8d9-f51f-ed7e-89eedcbed074",
  "resources": [
    {
      "module": "module.cluster[\"0\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-22T00:18:22.934-08:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anthos-lab-310709/global/firewalls/gke-gke-anthos-west-webhooks",
            "log_config": [],
            "name": "gke-gke-anthos-west-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/networks/default",
            "priority": 1000,
            "project": "anthos-lab-310709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/firewalls/gke-gke-anthos-west-webhooks",
            "source_ranges": [
              "172.16.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-gke-anthos-west"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project-services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "module": "module.cluster[\"1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-22T00:18:22.314-08:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anthos-lab-310709/global/firewalls/gke-gke-anthos-north-webhooks",
            "log_config": [],
            "name": "gke-gke-anthos-north-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/networks/default",
            "priority": 1000,
            "project": "anthos-lab-310709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/firewalls/gke-gke-anthos-north-webhooks",
            "source_ranges": [
              "172.16.1.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-gke-anthos-north"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project-services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "module": "module.cluster[\"2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-22T00:18:22.807-08:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anthos-lab-310709/global/firewalls/gke-gke-ingress-webhooks",
            "log_config": [],
            "name": "gke-gke-ingress-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/networks/default",
            "priority": 1000,
            "project": "anthos-lab-310709",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anthos-lab-310709/global/firewalls/gke-gke-ingress-webhooks",
            "source_ranges": [
              "172.16.2.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-gke-ingress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project-services.google_project_service.project_services"
          ]
        }
      ]
    }
  ]
}